:bug: Fix display of notes with too wide links

--- a/web/static/note-rendered.css
+++ b/web/static/note-rendered.css
@@ -1,6 +1,7 @@
 .note-rendered {
   padding: 40px;
   line-height: 1.5;
+  word-break: break-word;
 }
 
 .note-rendered h1 {
